k8s/infrastructure/ingress/command.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: command-ingress
  namespace: atlastickets
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: command-service
            port:
              number: 3000
